capitalize app name, and input type password

--- a/src/app/shared/components/about.component.html
+++ b/src/app/shared/components/about.component.html
@@ -4,7 +4,7 @@
       <img src="assets/storaji.png" alt="{{ app.name }}">
     </div>
     <div class="uk-card-body">
-      <h3 class="uk-card-title uk-margin-small-bottom">{{ app.name }}</h3>
+      <h3 class="uk-card-title uk-margin-small-bottom uk-text-capitalize">{{ app.name }}</h3>
       <p class="uk-text-meta uk-margin-remove">Version</p>
       <p class="uk-text-meta uk-margin-remove">{{ app.version }}</p>
       <p class="uk-text-meta">Storaji &copy; 2017, Indomaxim Technology</p>
