--- a/src/app/shared/components/navbar.component.html
+++ b/src/app/shared/components/navbar.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="uk-navbar-center uk-logo">
         <img src="assets/storaji-white.png" width="60">
-        <a routerLink="/" class="uk-navbar-item uk-logo">
+        <a routerLink="/" class="uk-navbar-item uk-logo uk-text-capitalize">
           {{ app.name }}
         </a>
       </div>
