lets make it work first

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<ng-progress [color]="'white'" [showSpinner]="false" [positionUsing]="'translate3d'"></ng-progress>
+<ng-progress [color]="'white'" [spinner]="false"></ng-progress>
 <router-outlet></router-outlet>
 <div class="uk-overlay-default uk-position-cover">
     <div class="uk-position-center">
