--- a/src/styles.css
+++ b/src/styles.css
@@ -170,7 +170,7 @@ storaji-autocomplete .ui-autocomplete-list-item.ui-state-highlight {
     position: relative;
 }
 .tm-sidebar-left::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
 }
 
@@ -180,7 +180,7 @@ storaji-autocomplete .ui-autocomplete-list-item.ui-state-highlight {
 }
 
 .tm-sidebar-left::-webkit-scrollbar-thumb {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #bdbdbd;
 }
 
